# zeta

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  main.py  pyproject.toml
scripts/: chart_profit.py  download_report.py  stock_dividend_cninfo.py  stock_xjll_em.py  stock_zcfz_em.py
src/main/app/: __init__.py  server.py
src/main/app/controller/: auth_controller.py  bank_capital_info_controller.py  dict_datum_controller.py  dict_type_controller.py  intelligence_information_controller.py  menu_controller.py  probe_controller copy.py  probe_controller.py  report_income_statement_controller.py  role_controller.py  role_menu_controller.py  sector_capital_flow_controller.py  stock_basic_info_controller.py  stock_capital_flow_controller.py  stock_controller.py  stock_daily_info_controller.py  stock_daily_recommendation_controller.py  stock_financial_report_controller.py  stock_holder_info_controller.py  user_controller.py  user_role_controller.py
src/main/app/enums/: __init__.py  enum.py
src/main/app/exception/: __init__.py  auth_exception.py  biz_exception.py
src/main/app/mapper/: bank_capital_info_mapper.py  dict_datum_mapper.py  dict_type_mapper.py  intelligence_information_mapper.py  menu_mapper.py  report_income_statement_mapper.py  role_mapper.py  role_menu_mapper.py  sector_capital_flow_mapper.py  stock_basic_info_mapper.py  stock_capital_flow_mapper.py  stock_daily_info_mapper.py  stock_daily_recommendation_mapper.py  stock_financial_report_mapper.py  stock_holder_info_mapper.py  stock_mapper.py  user_mapper.py  user_role_mapper.py
src/main/app/model/: bank_capital_info_model.py  dict_datum_model.py  dict_type_model.py  intelligence_information_model.py  menu_model.py  report_income_statement_model.py  role_menu_model.py  role_model.py  sector_capital_flow_model.py  stock_basic_info_model.py  stock_capital_flow_model.py  stock_daily_info_model.py  stock_daily_recommendation_model.py  stock_financial_report_model.py  stock_holder_info_model.py  stock_model.py  user_model.py  user_role_model.py
src/main/app/schema/: auth_schema.py  bank_capital_info_schema.py  dict_datum_schema.py  dict_type_schema.py  intelligence_information_schema.py  menu_schema.py  report_income_statement_schema.py  role_menu_schema.py  role_schema.py  sector_capital_flow_schema.py  stock_basic_info_schema.py  stock_capital_flow_schema.py  stock_daily_info_schema.py  stock_daily_recommendation_schema.py  stock_financial_report_schema.py  stock_holder_info_schema.py  stock_schema.py  (+2 more)
src/main/resource/: config-dev.yml  config.yml
src/tests/: pwd.py  stock_lrb_em.py  stock_zcfz_em_bjs.py  try_run.py
(+41 files in other folders)
